--- a/CodeV0.2/app/src/main/res/values/strings.xml
+++ b/CodeV0.2/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     </string>
     <string name="title_activity_tab">Chwa pann</string>
     <string name="section_format">Hello World from section: %1$d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
