modif app mobile encore

--- a/CodeV0.2/app/src/main/res/values/strings.xml
+++ b/CodeV0.2/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CodeV0.2</string>
+    <string name="app_name">Chwa Pa N</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -19,7 +19,7 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="title_activity_tab">Chwa pann</string>
+    <string name="title_activity_tab">Chwa Pa N</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
     <!-- TODO: Remove or change this placeholder text -->
